Added some basic occlusion filtering for markers. If you select a category, markers with venue names will be displayed in the order they are added, as long as they don't overlap with a previous marker.

--- a/examples/website-integration/sample.css
+++ b/examples/website-integration/sample.css
@@ -87,3 +87,15 @@ body {
 	background-size: contain;
 	background-position: left;
 }
+
+.location-label {
+	background: white;
+	border: 2px solid #006666;
+	position: relative;
+	display: inline-block;
+	white-space: nowrap;
+	padding: 5px 5px 5px 5px;
+	font-size: medium;
+	border-radius: 5px;
+}
+
